# trr

./: .gitignore  README.md
compare/: framework.py
de/: main.py  notebook.ipynb  requirements.txt
descent/: main.py
ga-test-func/: .gitignore  CMakeLists.txt
ga-test-func/source/: beale.hpp  main.cpp  problem.hpp  sphere.hpp  utils.hpp
ga-tsp/: main.py  requirements.txt
matea/: de.py  gmfea.py  individual.py  main.py  matea.py  mfea.py  objective.py  single_task.py  task.py
mfea/: display.py  gmfea.py  individual.py  main.py  problems.py  solver.py
presentation/: beamerinnerthemehust.sty  beamerouterthemehust.sty  main.refs.bib  main.tex
presentation/main.parts/: DE.tex  GA.tex  MFEA.tex  MFO.tex  frameworks.tex  intro.tex  separate_population_based.tex
